# bundestag_speeches

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/lambda/get_xmls/: fetch_files.py
