[project]
name = "bundestag-speeches"
version = "0.1.0"
description = "-"
authors = [
    {name = "fewonett",email = "81972427+fewonett@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "boto3 (>=1.40.67,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.3"
tofu = "^1.8.17"
pytest = "^8.4.2"

[tool.poety.group.lint.dependencies]
ruff = "^0.14.3"

[tool.poetry.test.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
